# aware-rs

./: Cargo.toml  README.md  release.toml
src/: aws.rs  main.rs  show.rs
src/aws/: cf.rs  ec2.rs
src/aws/ec2/: impls.rs
