[package]
name = "aware"
version = "0.0.36"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/imp/aware-rs"
description = "AWS Resource Explorer"
rust-version = "1.58.0"

[dependencies]
anyhow = "1.0"
aws-config = "0.56"
aws-types = "0.56"
aws-sdk-ec2 = "0.29"
aws-sdk-cloudformation = "0.29"
clap = { version = "4.0", features = ["derive"] }
duplicate = "1.0"
indicatif = "0.17"
termtree = "0.4"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tracing-subscriber = "0.3"
